# Proyecto-1-SO

./: .gitignore  CMakeLists.txt  Makefile  ReadME.md  emisor.c  finalizador.c  inicializador.c  memInfo.h  output.txt  receptor.c  receptor_test  test_output.txt
files/: input.txt  output.txt
src/: app_state.c  app_state.h  finalizador.c  finalizador.h  heavy_process.c  heavy_process.h  main.c  memory.c  memory.h  monitor.c  monitor.h  processor.c  processor.h  receptor.c  receptor.h  sender_window.c
src/pages/: app_state.h  emisor.c  emisor.h  inicializador.c  inicializador.h  modo_operacion.c  modo_operacion.h  nueva_instancia.c  nueva_instancia.h  page_main.c  page_main.h  page_one.c  page_one.h  page_sender.c  page_sender.h  page_two.c  page_two.h  sender_window.c  sender_window.h
src/procesos/: emisor.c  finalizador.c  inicializador.c  receptor.c
src/receptor/: finalizador.c  finalizador.h  receptor.c  test.c  text.c
src/refactor /: finalizador.c
src/tests/: test.c  test2.c
